fixed spacing on CardList

--- a/sass/components/_CardList.scss
+++ b/sass/components/_CardList.scss
@@ -4,6 +4,7 @@
 	@media screen and (min-width: 860px) {
 		display: grid;
 		grid-template-columns: 50% 50%;
+		margin-top: 0px;
 	}
 	.card-wrapper {
 		margin: 10px;
